@@ -5,7 +5,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: grid.test,v 1.12 2001/08/22 19:59:49 pspjuth Exp $
+# RCS: @(#) $Id: grid.test,v 1.13 2001/09/23 11:30:44 pspjuth Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     source [file join [pwd] [file dirname [info script]] defs.tcl]
@@ -957,6 +957,12 @@ test grid-13.4 {-ipadx} {
 } {1 {bad ipadx value "x": must be positive screen distance}}
 grid_reset 13.4
 
+test grid-13.4.1 {-ipadx} {
+    frame .f -width 20 -height 20 -highlightthickness 0 -bg red
+    list [catch "grid .f -ipadx {5 5}" msg] $msg
+} {1 {bad ipadx value "5 5": must be positive screen distance}}
+grid_reset 13.4.1
+
 test grid-13.5 {-ipadx} {
     frame .f -width 200 -height 100 -highlightthickness 0 -bg red
     grid .f
@@ -973,6 +979,12 @@ test grid-13.6 {-ipady} {
     list [catch "grid .f -ipady x" msg] $msg
 } {1 {bad ipady value "x": must be positive screen distance}}
 grid_reset 13.6
+
+test grid-13.6.1 {-ipady} {
+    frame .f -width 20 -height 20 -highlightthickness 0 -bg red
+    list [catch "grid .f -ipady {5 5}" msg] $msg
+} {1 {bad ipady value "5 5": must be positive screen distance}}
+grid_reset 13.6.1
 
 test grid-13.7 {-ipady} {
     frame .f -width 200 -height 100 -highlightthickness 0 -bg red
